--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "@angular/forms": "^20.1.4",
     "@angular/platform-browser": "^20.1.4",
     "@angular/router": "^20.1.4",
-    "rxjs": "~7.8.2",
-    "tslib": "^2.8.1",
-    "zone.js": "~0.15.1",
+    "@primeuix/themes": "^1.2.5",
+    "@tailwindcss/postcss": "^4.1.17",
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "@tauri-apps/plugin-opener": "^2",
+    "postcss": "^8.5.6",
+    "primeng": "^20.3.0",
+    "rxjs": "~7.8.2",
+    "tailwindcss": "^4.1.17",
+    "tailwindcss-primeui": "^0.6.1",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.1.4",
