--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "chart.js": "^4.5.1",
     "postcss": "^8.5.6",
     "primeng": "^20.3.0",
     "rxjs": "~7.8.2",
